--- a/app/src/main/res/layout/activity_kuliner_brekecek.xml
+++ b/app/src/main/res/layout/activity_kuliner_brekecek.xml
@@ -123,22 +123,116 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:fontFamily="@font/poppinsbold"
-                    android:text="Deskripsi"
+                    android:text="Tempat Rekomendasi"
                     android:textSize="16sp">
                 </TextView>
 
-                <TextView
-                    android:id="@+id/text5"
+                <android.support.v7.widget.CardView
+                    android:foreground="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    app:cardCornerRadius="5dp"
+                    android:layout_margin="16dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:drawablePadding="10dp"
-                    android:fontFamily="@font/poppinsregular"
-                    android:text="Benteng Pendem adalah hasil lokalisasi dari nama Kusbatterij op de Lantong te Tjilatjap yang berarti “Beteng Pantai di Teluk Cilacap”. Ya, benteng ini merupakan bentuk pertahanan yang dibangun pada masa kolonial Belanda, tepatnya pada tahun 1861 hingga 1879.
-Meski sudah cukup berumur, benteng ini masih tampak kokoh hingga saat ini. Arsitektur yang memukau, lingkungan yang asri, berpadu dengan nilai sejarah yang kental, menjadikan Benteng Pendem sebagai salah satu destinasi wisata yang menarik dari tanah Cilacap."
-                    android:textSize="14sp">
-                </TextView>
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/brekecekpatak"
+                        android:scaleType="centerCrop"
+                        android:id="@+id/imageview1"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp">
+                    </ImageView>
+
+                    <TextView
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Brekecek Pathak Jahan Bu Widi"
+                        android:fontFamily="@font/poppinsbold"
+                        android:textColor="#dd000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </TextView>
+
+                        <LinearLayout
+                            android:layout_marginRight="10dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                        <TextView
+                            android:drawableLeft="@drawable/ic_access_time_black_24dp"
+                            android:drawablePadding="10dp"
+                            android:text="10.00 – 19.00"
+                            android:fontFamily="@font/poppinsregular"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                        </TextView>
+
+                        <TextView
+                            android:drawableLeft="@drawable/ic_rupiah"
+                            android:drawablePadding="12dp"
+                            android:text="13.000 - 27.000"
+                            android:fontFamily="@font/poppinsregular"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                        </TextView>
+
+                            <TextView
+                                android:drawableLeft="@drawable/ic_location_on_black_24dp"
+                                android:drawablePadding="10dp"
+                                android:text="+62 857 2878 8810"
+                                android:fontFamily="@font/poppinsregular"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                            </TextView>
+
+                        </LinearLayout>
+
+                            <RelativeLayout
+                                android:layout_marginRight="10dp"
+                                android:gravity="right|center"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+                            <Button
+                                android:id="@+id/telephone"
+                                android:foreground="?attr/selectableItemBackground"
+                                android:clickable="true"
+                                android:drawablePadding="5dp"
+                                android:paddingStart="10dp"
+                                android:paddingEnd="10dp"
+                                android:textSize="14sp"
+                                android:drawableLeft="@drawable/ic_call_white_24dp"
+                                android:background="@drawable/hubungi"
+                                android:textColor="#ffffffff"
+                                android:textAllCaps="false"
+                                android:text="Hubungi"
+                                android:layout_width="wrap_content"
+                                android:layout_height="36dp">
+
+                            </Button>
+
+                            </RelativeLayout>
+
+                        </LinearLayout>
+
+
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
@@ -160,7 +254,7 @@ Meski sudah cukup berumur, benteng ini masih tampak kokoh hingga saat ini. Arsit
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:fontFamily="@font/poppinsbold"
-                    android:text="Lokasi wisata"
+                    android:text="Lokasi"
                     android:textSize="16sp">
                 </TextView>
 
