--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,7 @@
             </Button>
 
             <Button
+                android:id="@+id/buttonkuliner"
                 android:layout_width="74dp"
                 android:layout_height="74dp"
                 android:textSize="12sp"
