--- a/app/src/main/res/layout/activity_kuliner_brekecek.xml
+++ b/app/src/main/res/layout/activity_kuliner_brekecek.xml
@@ -20,26 +20,26 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
             app:expandedTitleGravity="top"
+            app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
             <ImageView
-                android:src="@drawable/brekecek"
-                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/brekecek">
 
             </ImageView>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:titleTextAppearance="@id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll|enterAlways"
-                app:layout_collapseMode="pin" />
+                app:titleTextAppearance="@id/collapsing_toolbar" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -55,36 +55,36 @@
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:paddingTop="10dp"
-                android:layout_marginTop="10dp"
                 android:id="@+id/line1"
-                android:paddingBottom="10dp"
-                android:background="#ffffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginTop="10dp"
+                android:background="#ffffffff"
+                android:orientation="vertical"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
 
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:paddingBottom="2dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="2dp">
 
                     <TextView
                         android:id="@+id/text1"
-                        android:textColor="#DD000000"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="16dp"
                         android:fontFamily="@font/poppinsbold"
                         android:text="Brekecek"
+                        android:textColor="#DD000000"
                         android:textSize="16sp">
-                    </TextView>
 
+                    </TextView>
 
                 </LinearLayout>
 
@@ -101,133 +101,131 @@
                 </TextView>
 
 
-
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/line2"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/line1"
+                android:layout_marginTop="10dp"
                 android:background="#ffffffff"
                 android:orientation="vertical"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/line1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:id="@+id/text4"
-                    android:textColor="#DD000000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:fontFamily="@font/poppinsbold"
                     android:text="Tempat Rekomendasi"
+                    android:textColor="#DD000000"
                     android:textSize="16sp">
                 </TextView>
 
                 <android.support.v7.widget.CardView
-                    android:foreground="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    app:cardCornerRadius="5dp"
-                    android:layout_margin="16dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    app:cardCornerRadius="5dp">
 
                     <LinearLayout
-                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-                    <ImageView
-                        android:src="@drawable/brekecekpatak"
-                        android:scaleType="centerCrop"
-                        android:id="@+id/imageview1"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp">
-                    </ImageView>
+                        <ImageView
+                            android:id="@+id/imageview1"
+                            android:layout_width="match_parent"
+                            android:layout_height="120dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/brekecekpatak">
+                        </ImageView>
 
-                    <TextView
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Brekecek Pathak Jahan Bu Widi"
-                        android:fontFamily="@font/poppinsbold"
-                        android:textColor="#dd000000"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </TextView>
-
-                        <LinearLayout
-                            android:layout_marginRight="10dp"
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginBottom="10dp"
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_marginTop="10dp"
+                            android:fontFamily="@font/poppinsbold"
+                            android:text="Brekecek Pathak Jahan Bu Widi"
+                            android:textColor="#dd000000">
+                        </TextView>
 
                         <LinearLayout
-                            android:orientation="vertical"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-
-                        <TextView
-                            android:drawableLeft="@drawable/ic_access_time_black_24dp"
-                            android:drawablePadding="10dp"
-                            android:text="10.00 – 19.00"
-                            android:fontFamily="@font/poppinsregular"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </TextView>
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:drawableLeft="@drawable/ic_rupiah"
-                            android:drawablePadding="12dp"
-                            android:text="13.000 - 27.000"
-                            android:fontFamily="@font/poppinsregular"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </TextView>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
 
-                            <TextView
-                                android:drawableLeft="@drawable/ic_location_on_black_24dp"
-                                android:drawablePadding="10dp"
-                                android:text="+62 857 2878 8810"
-                                android:fontFamily="@font/poppinsregular"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-                            </TextView>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
+                                    android:drawablePadding="10dp"
+                                    android:fontFamily="@font/poppinsregular"
+                                    android:text="10.00 – 19.00">
+                                </TextView>
 
-                        </LinearLayout>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:drawableLeft="@drawable/ic_rupiah"
+                                    android:drawablePadding="12dp"
+                                    android:fontFamily="@font/poppinsregular"
+                                    android:text="13.000 - 27.000">
+                                </TextView>
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:drawableLeft="@drawable/ic_call_black_24dp"
+                                    android:drawablePadding="10dp"
+                                    android:fontFamily="@font/poppinsregular"
+                                    android:text="+62 857 2878 8810">
+                                </TextView>
+
+                            </LinearLayout>
 
                             <RelativeLayout
-                                android:layout_marginRight="10dp"
-                                android:gravity="right|center"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent">
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="10dp"
+                                android:gravity="right|center">
 
-                            <Button
-                                android:id="@+id/telephone"
-                                android:foreground="?attr/selectableItemBackground"
-                                android:clickable="true"
-                                android:drawablePadding="5dp"
-                                android:paddingStart="10dp"
-                                android:paddingEnd="10dp"
-                                android:textSize="14sp"
-                                android:drawableLeft="@drawable/ic_call_white_24dp"
-                                android:background="@drawable/hubungi"
-                                android:textColor="#ffffffff"
-                                android:textAllCaps="false"
-                                android:text="Hubungi"
-                                android:layout_width="wrap_content"
-                                android:layout_height="36dp">
+                                <Button
+                                    android:id="@+id/telephone"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="36dp"
+                                    android:background="@drawable/hubungi"
+                                    android:clickable="true"
+                                    android:drawableLeft="@drawable/ic_call_white_24dp"
+                                    android:drawablePadding="5dp"
+                                    android:foreground="?attr/selectableItemBackground"
+                                    android:paddingStart="10dp"
+                                    android:paddingEnd="10dp"
+                                    android:text="Hubungi"
+                                    android:textAllCaps="false"
+                                    android:textColor="#ffffffff"
+                                    android:textSize="14sp">
 
-                            </Button>
+                                </Button>
 
                             </RelativeLayout>
 
                         </LinearLayout>
-
 
 
                     </LinearLayout>
@@ -237,58 +235,82 @@
             </LinearLayout>
 
             <LinearLayout
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/line2"
+                android:layout_marginTop="10dp"
                 android:background="#ffffffff"
                 android:orientation="vertical"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/line2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:id="@+id/text7"
-                    android:textColor="#DD000000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:fontFamily="@font/poppinsbold"
                     android:text="Lokasi"
+                    android:textColor="#DD000000"
                     android:textSize="16sp">
                 </TextView>
 
                 <RelativeLayout
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="16dp">
 
                     <fragment
-                        android:layout_gravity="center_horizontal"
                         android:id="@+id/map"
                         class="com.google.android.gms.maps.SupportMapFragment"
                         android:layout_width="match_parent"
-                        android:layout_height="230dp" />
+                        android:layout_height="230dp"
+                        android:layout_gravity="center_horizontal" />
+
+                    <TextView
+                        android:textColor="#dd000000"
+                        android:id="@+id/textalamat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/map"
+                        android:layout_marginTop="10dp"
+                        android:drawablePadding="10dp"
+                        android:fontFamily="@font/poppinssemibold"
+                        android:text="Brekecek Pathak Jahan Bu Widi">
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/textalamat1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textalamat"
+                        android:drawableLeft="@drawable/ic_location_on_black_24dp"
+                        android:drawablePadding="10dp"
+                        android:fontFamily="@font/poppinsregular"
+                        android:text="Jl. Slamet No.5, Cilacap, Sidanegara, Kec. Cilacap Tengah, Kabupaten Cilacap, Jawa Tengah">
+                    </TextView>
 
                     <Button
-                        android:layout_below="@id/map"
-                        android:layout_marginTop="10dp"
-                        android:padding="10dp"
-                        android:fontFamily="@font/poppinssemibold"
-                        android:textSize="14sp"
-                        android:textAllCaps="false"
                         android:id="@+id/buttonmaps1"
-                        android:text="Lihat Peta"
-                        android:textColor="#ffffffff"
-                        android:background="@drawable/button_lokasi"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/textalamat1"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/button_lokasi"
+                        android:fontFamily="@font/poppinssemibold"
+                        android:padding="10dp"
+                        android:text="Lihat Peta"
+                        android:textAllCaps="false"
+                        android:textColor="#ffffffff"
+                        android:textSize="14sp">
 
                     </Button>
 
                 </RelativeLayout>
+
 
             </LinearLayout>
 
