--- a/app/src/main/res/layout/activity_kuliner_brekecek.xml
+++ b/app/src/main/res/layout/activity_kuliner_brekecek.xml
@@ -127,6 +127,7 @@
                 </TextView>
 
                 <android.support.v7.widget.CardView
+                    app:cardUseCompatPadding="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -263,13 +264,6 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="16dp">
 
-                    <fragment
-                        android:id="@+id/map"
-                        class="com.google.android.gms.maps.SupportMapFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="230dp"
-                        android:layout_gravity="center_horizontal" />
-
                     <TextView
                         android:textColor="#dd000000"
                         android:id="@+id/textalamat"
@@ -308,6 +302,13 @@
                         android:textSize="14sp">
 
                     </Button>
+
+                    <fragment
+                        android:id="@+id/map"
+                        class="com.google.android.gms.maps.SupportMapFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="230dp"
+                        android:layout_gravity="center_horizontal" />
 
                 </RelativeLayout>
 
