--- a/app/src/main/res/layout/activity_kuliner_sate.xml
+++ b/app/src/main/res/layout/activity_kuliner_sate.xml
@@ -143,6 +143,7 @@ Sate Martawi disajikan dengan lontong dan bumbu kacang seperti sate pada umumnya
                         android:layout_height="wrap_content">
 
                         <android.support.v7.widget.CardView
+                            app:cardUseCompatPadding="true"
                             android:layout_width="320dp"
                             android:layout_height="wrap_content"
                             android:clickable="true"
@@ -248,6 +249,7 @@ Sate Martawi disajikan dengan lontong dan bumbu kacang seperti sate pada umumnya
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
+                            app:cardUseCompatPadding="true"
                             android:layout_marginLeft="16dp"
                             android:layout_width="320dp"
                             android:layout_height="wrap_content"
