--- a/app/src/main/res/layout/activity_kuliner_sukun.xml
+++ b/app/src/main/res/layout/activity_kuliner_sukun.xml
@@ -141,6 +141,7 @@
                         android:layout_height="wrap_content">
 
                         <android.support.v7.widget.CardView
+                            app:cardUseCompatPadding="true"
                             android:layout_width="320dp"
                             android:layout_height="wrap_content"
                             android:clickable="true"
@@ -246,6 +247,7 @@
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
+                            app:cardUseCompatPadding="true"
                             android:layout_marginLeft="16dp"
                             android:layout_width="320dp"
                             android:layout_height="wrap_content"
