--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,11 +197,12 @@
                         android:orientation="horizontal">
 
                         <android.support.v7.widget.CardView
+                        android:foreground="?attr/selectableItemBackground"
                         app:cardElevation="0dp"
                         app:cardUseCompatPadding="true"
                         app:cardCornerRadius="5dp"
                         android:layout_marginRight="5dp"
-                        android:id="@+id/cardviewAmz1"
+                        android:id="@+id/cardviewpendem"
                         android:layout_width="200dp"
                         android:layout_height="270dp"
                         android:clickable="true">
@@ -212,8 +213,9 @@
                             android:layout_height="wrap_content">
 
                             <ImageView
+                                android:foreground="?attr/selectableItemBackground"
                                 android:scaleType="centerCrop"
-                                android:id="@+id/button1"
+                                android:id="@+id/imagependem"
                                 android:layout_width="match_parent"
                                 android:layout_height="180dp"
                                 android:layout_marginStart="5dp"
@@ -252,11 +254,12 @@
                     </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
+                            android:foreground="?attr/selectableItemBackground"
                             app:cardElevation="0dp"
                             app:cardUseCompatPadding="true"
                             app:cardCornerRadius="5dp"
                             android:layout_marginRight="5dp"
-                            android:id="@+id/cardviewAmz2"
+                            android:id="@+id/cardviewpantai"
                             android:layout_width="200dp"
                             android:layout_height="270dp"
                             android:clickable="true">
@@ -267,8 +270,9 @@
                                 android:layout_height="wrap_content">
 
                                 <ImageView
+                                    android:foreground="?attr/selectableItemBackground"
                                     android:scaleType="centerCrop"
-                                    android:id="@+id/button2"
+                                    android:id="@+id/imagepantai"
                                     android:layout_width="match_parent"
                                     android:layout_height="180dp"
                                     android:layout_marginStart="5dp"
@@ -307,11 +311,12 @@
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
+                            android:foreground="?attr/selectableItemBackground"
                             app:cardElevation="0dp"
                             app:cardUseCompatPadding="true"
                             app:cardCornerRadius="5dp"
                             android:layout_marginRight="5dp"
-                            android:id="@+id/cardviewAmz4"
+                            android:id="@+id/cardviewkemit"
                             android:layout_width="200dp"
                             android:layout_height="270dp"
                             android:clickable="true">
@@ -322,8 +327,9 @@
                                 android:layout_height="wrap_content">
 
                                 <ImageView
+                                    android:foreground="?attr/selectableItemBackground"
                                     android:scaleType="centerCrop"
-                                    android:id="@+id/button3"
+                                    android:id="@+id/imagekemit"
                                     android:layout_width="match_parent"
                                     android:layout_height="180dp"
                                     android:layout_marginStart="5dp"
@@ -401,10 +407,11 @@
                         android:orientation="horizontal">
 
                         <android.support.v7.widget.CardView
+                            android:foreground="?attr/selectableItemBackground"
                             app:cardUseCompatPadding="true"
                             app:cardCornerRadius="5dp"
                             android:layout_marginRight="5dp"
-                            android:id="@+id/cardview1"
+                            android:id="@+id/cardviewkuliner1"
                             android:layout_width="300dp"
                             android:layout_height="275dp"
                             android:clickable="true">
@@ -415,8 +422,9 @@
                                 android:layout_height="wrap_content">
 
                                 <ImageView
+                                    android:foreground="?attr/selectableItemBackground"
                                     android:scaleType="centerCrop"
-                                    android:id="@+id/button10"
+                                    android:id="@+id/buttonkuliner1"
                                     android:layout_width="match_parent"
                                     android:layout_height="170dp"
                                     android:layout_marginStart="5dp"
@@ -455,10 +463,11 @@
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
+                            android:foreground="?attr/selectableItemBackground"
                             app:cardUseCompatPadding="true"
                             app:cardCornerRadius="5dp"
                             android:layout_marginRight="5dp"
-                            android:id="@+id/cardview2"
+                            android:id="@+id/cardviewkuliner2"
                             android:layout_width="300dp"
                             android:layout_height="275dp"
                             android:clickable="true">
@@ -469,8 +478,9 @@
                                 android:layout_height="wrap_content">
 
                                 <ImageView
+                                    android:foreground="?attr/selectableItemBackground"
                                     android:scaleType="centerCrop"
-                                    android:id="@+id/button11"
+                                    android:id="@+id/buttonkuliner2"
                                     android:layout_width="match_parent"
                                     android:layout_height="170dp"
                                     android:layout_marginStart="5dp"
@@ -509,10 +519,11 @@
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
+                            android:foreground="?attr/selectableItemBackground"
                             app:cardUseCompatPadding="true"
                             app:cardCornerRadius="5dp"
                             android:layout_marginRight="5dp"
-                            android:id="@+id/cardview3"
+                            android:id="@+id/cardviewkuliner3"
                             android:layout_width="300dp"
                             android:layout_height="275dp"
                             android:clickable="true">
@@ -523,8 +534,9 @@
                                 android:layout_height="wrap_content">
 
                                 <ImageView
+                                    android:foreground="?attr/selectableItemBackground"
                                     android:scaleType="centerCrop"
-                                    android:id="@+id/button13"
+                                    android:id="@+id/buttonkuliner3"
                                     android:layout_width="match_parent"
                                     android:layout_height="170dp"
                                     android:layout_marginStart="5dp"
